# prex

./: .gitignore  README.md  pyproject.toml
src/prex/: _tree.py  affine.py  dist.py  opt.py  rigid.py  rigid_shear.py  tps.py  util.py
src/prex/cpd/: __init__.py  _matching.py  affine.py  nonrigid.py  rigid.py  util.py
src/prex/cpd/bayes/: __init__.py  _private.py  kernel.py  normalization.py  util.py
src/prex/gmm/: affine.py  dist.py  grb.py  opt.py  phs.py  rigid.py  tps.py
src/prex/gmm/grad/: __init__.py  _util.py  rigid.py  tps.py
src/prex/grbf/: _util.py  affine.py  rigid.py
tests/: affine_test.py  distance_test.py  grbf_affine_test.py  grbf_rigid_test.py  l2_gmm_test.py  rigid_klv_gradients_test.py  rigid_shear_test.py  rigid_test.py  self_energy_test.py  test_bcpd_comparison.py  test_bcpd_nonrigid_verification.py  test_bcpd_scale_invariance.py  test_cpd_affine.py  test_cpd_masked.py  test_cpd_nonrigid.py  test_cpd_rigid.py  test_cpd_weighted.py  test_gp_inversion.py  test_l2_consistency.py  test_rigid_l2_gradients.py  test_tps_l2_gradients.py  tps_klg_gradients_test.py  tps_klv_gradients_test.py  tps_test.py
