[project]
name = "prex"
version = "0.1.0"
description = "Point cloud registration."
readme = "README.md"
authors = [
    { name = "matt", email = "mb46@princeton.edu" }
]
requires-python = ">=3.13"
keywords = ["jax"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax ; sys_platform == 'win32'",
    "jax-metal ; sys_platform == 'darwin'",
    "jax[cuda12] ; sys_platform == 'linux'",
    "jaxtyping",
    "optax",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "mkdocs>=1.6.1,<2",
    "darglint>=1.8.1,<2",
    "flake8>=7.2.0,<8",
    "isort>=6.0.1,<7",
    "mypy>=1.15.0,<2",
    "pyupgrade>=3.19.1,<4",
    "typeguard>=4.4.2,<5",
    "pre-commit>=4.2.0,<5",
    "pre-commit-hooks>=5.0.0,<6",
    "pytest>=8.3.5,<9",
    "pooch>=1.8.2,<2",
    "mkdocstrings-python>=1.16.10,<2",
    "mkdocs-material>=9.6.12,<10",
    "ipykernel>=6.29.5,<7",
]

[tool.hatch.build.targets.sdist]
include = ["src/prex"]

[tool.hatch.build.targets.wheel]
include = ["src/prex"]

[tool.hatch.build.targets.wheel.sources]
"src/prex" = "prex"

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
